--- a/style.css
+++ b/style.css
@@ -394,6 +394,15 @@ p
     max-width: 150px;
     border: none;
 }
+.contact .contactForm .rowcheck
+{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 20px;
+    margin-top: 20px;
+    color: var(--black);
+}
+
 
 /* responsive */
 
