added "personelijke Interesse"

--- a/style.css
+++ b/style.css
@@ -274,6 +274,14 @@ p
 {
     max-width: 100%;
 }
+.about .content .imgBx2
+{
+    margin-right: 40px;
+}
+.about .content .imgBx2 img
+{
+    max-width: 100%;
+}
 .project .content
 {
     display: grid;
@@ -406,7 +414,7 @@ p
 
 /* responsive */
 
-@media (max-width: 992px)
+@media (max-width: 62em)
 {
     .navigation
     {
